# eukan

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  Dockerfile-base  Dockerfile-eukannotpass  README.md  conda-activate.sh  environment.yml  eukan  eukan-docker  eukka.MPEW.RM.cfg  pyproject.toml  requirements.txt  tools.toml  transcriptome_assembly.sh
.github/workflows/: ci.yml
configs/: PASA-alignAssembly.config
docker/: Dockerfile  Dockerfile.dev
eukan/: __init__.py  check.py  cli.py  exceptions.py  gencode.py  settings.py  validation.py
eukan/annotation/: __init__.py  alignment.py  augustus.py  consensus.py  (+9 more)
functional-annotation/: .func-annot.swp  db-fetch.py  func-annot  hmmscan.out  phmmer.out  test.faa  test.mod.faa
gff3-to-seq/: gff3toseq  tmp.fna  tmp.gff3
scripts/: generate-env.py  install-extras.sh
src/: .swp  gffintersecter.py  gffparser.py  orffinder.py  routines.py
tests/: annot_quality.py  compare_spaln_modes.py  conftest.py  run_pipeline.py  test_check.py  test_cli_compare.py  test_cli_errors.py  test_compare.py  test_concordance.py  test_consensus.py  test_dbfetch.py  test_evm_parser.py  test_format.py  test_functional_search.py  test_gff_hierarchy.py  test_gff_io.py  test_gff_normalize.py  test_gff_parser.py  test_health.py  test_inference.py  test_infra_layout.py  test_integration.py  test_intersecter.py  test_kofam.py  test_manifest.py  test_orchestrator.py  test_orf.py  test_prep_submission.py  test_repeats.py  test_runner.py  test_settings.py  test_splice_and_gencode.py  test_submission_cleanup.py  testdata.py
(+74 files in other folders)
